@@ -1,10 +1,4 @@
-% STK_GAUSSIANNOISE_ [experimental] is the base class for Gaussian noise models
-%
-% EXPERIMENTAL CLASS WARNING:  The stk_gaussiannoise_ class is currently
-%    considered experimental.  STK users who wish to experiment with it are
-%    welcome to do so, but should be aware that API-breaking changes are likely
-%    to happen in future releases.  We invite them to direct any questions,
-%    remarks or comments about this experimental class to the STK mailing list.
+% STK_GAUSSIANNOISE_ [internal] is the base class for Gaussian noise models
 
 % Copyright Notice
 %
