@@ -1,3 +1,11 @@
+2019-09-06  Julien Bect  <julien.bect@centralesupelec.fr>
+
+	INDEX: Fix sections and re-organize a little
+
+	* admin/octpkg/INDEX: Fix sections and re-organize a little.
+	* model/noise/@stk_gaussiannoise_/stk_gaussiannoise_.m: Mark as
+	internal.
+
 2019-09-03  Julien Bect  <julien.bect@centralesupelec.fr>
 
 	Makefile: Use ${OCTAVE} from environment if defined
